--- a/Linkage/Linkage/Info.plist
+++ b/Linkage/Linkage/Info.plist
@@ -41,8 +41,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否可以访问相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否可以访问相册</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
