添加扫一扫

--- a/Linkage/Linkage/Info.plist
+++ b/Linkage/Linkage/Info.plist
@@ -64,5 +64,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>App需要您的同意,才能访问相册</string>
 </dict>
 </plist>
