添加定位功能

--- a/wwwww/wwwww/Info.plist
+++ b/wwwww/wwwww/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>需要获取您的定位权限</string>
 </dict>
 </plist>
